272 - Add EnumTypeConverter, SF